# os__lab2

./: CMakeLists.txt  OS_lab2.sln  OS_lab2.vcxproj  OS_lab2.vcxproj.filters  functions.cpp  functions.h  main.cpp  test_main.cpp
